--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@400;700;900&display=swap" rel="stylesheet">
   <title>freshtrust</title>
   <link rel="icon" href="assets/images/icon.png">
+  <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <script src="../../assets/js/translator.js"></script>
  <script src="main.js"></script>
   
   
