--- a/pages/about/apply.html
+++ b/pages/about/apply.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="icon" href="../../assets/images/icon.png">
     <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@400;700;900&display=swap" rel="stylesheet">
+    <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <script src="../../assets/js/translator.js"></script>
     <title>shemes</title>
 </head>
 
@@ -40,6 +42,8 @@
 </nav>
 <main>
   <!-- content starts  -->
+  <div id="google_translate_element" class="translate"></div>
+
     <section>
         <div class="gethelpbg">
             <h1>HOW TO APPLY</h1>
