--- a/pages/patientpages/bookingform.html
+++ b/pages/patientpages/bookingform.html
@@ -15,6 +15,8 @@
 	<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.1/themes/smoothness/jquery-ui.css">
 	<link href="https://fonts.googleapis.com/css2?family=Merienda:wght@400;700;900&display=swap" rel="stylesheet">
 	<script src="../../assets/js/sweetalert.min.js"></script>
+	<script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <script src="../../assets/js/translator.js"></script>
 </head>
 
 <body>
@@ -23,6 +25,8 @@
 		<input type="checkbox" id="click" >
   
 	  </div> -->
+	  <div id="google_translate_element" class="translate"></div>
+
 	<nav>
 		<div class="side-nav">
 			<img src="../../assets/images/logo.png" width="250px" alt="image error" class="logoimg">
