--- a/pages/volunteerpages/new.html
+++ b/pages/volunteerpages/new.html
@@ -1,57 +1,13 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src=""></script>
+  <title>Document</title>
 </head>
-<style>
-    .product-detail {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.product-image img {
-  width: 70%;
-}
-
-.product-small-images {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  width: 28%;
-}
-
-.product-small-images img {
-  width: 30%;
-  margin-bottom: 10px;
-}
-
-.product-description {
-  width: 100%;
-  margin-top: 20px;
-}
-
-</style>
 <body>
-    <div class="product-detail">
-        <div class="product-image">
-          <img src="../../assets/images/bike1.jpg" alt="Product Image">
-        </div>
-        <div class="product-small-images">
-          <img src="../../assets/images/bike2.jpg" alt="Small Image 1">
-          <img src="../../assets/images/bike2.jpg" alt="Small Image 2">
-          <img src="../../assets/images/bike2.jpg" alt="Small Image 3">
-        </div>
-        <div class="product-description">
-          <p>This is a little description about the product.</p>
-        </div>
-      </div>
+  <div></div>
 </body>
+<script> (function(){ var s = document.createElement('script'); var h = document.querySelector('head') || document.body; s.src = 'https://acsbapp.com/apps/app/dist/js/app.js'; s.async = true; s.onload = function(){ acsbJS.init({ statementLink : '', footerHtml : '', hideMobile : false, hideTrigger : false, disableBgProcess : false, language : 'en', position : 'right', leadColor : '#146FF8', triggerColor : '#146FF8', triggerRadius : '50%', triggerPositionX : 'right', triggerPositionY : 'bottom', triggerIcon : 'people', triggerSize : 'bottom', triggerOffsetX : 20, triggerOffsetY : 20, mobile : { triggerSize : 'small', triggerPositionX : 'right', triggerPositionY : 'bottom', triggerOffsetX : 20, triggerOffsetY : 20, triggerRadius : '20' } }); }; h.appendChild(s); })();</script>
 </html>
-
-
-
-  
