--- a/pages/about/aboutus.html
+++ b/pages/about/aboutus.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="../../assets/css/aboutus.css">
     <link rel="stylesheet" href="../../assets/css/common.css">
     <script src="https://kit.fontawesome.com/98f622c388.js" crossorigin="anonymous"></script>
+    <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <script src="../../assets/js/translator.js"></script>
 </head>
 <!-- body starts  -->
 <body>
@@ -40,6 +42,8 @@
             <input type="checkbox" id="click" >
       
           </div> -->
+    <div id="google_translate_element" class="translate"></div>
+
         <section class="aboutsec1">
             <div  class="sec1h1">
                 <h1>ABOUT US</h1>
