--- a/pages/about/schemes.html
+++ b/pages/about/schemes.html
@@ -15,6 +15,8 @@
     integrity="">
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@400;700;900&display=swap" rel="stylesheet">
+    <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <script src="../../assets/js/translator.js"></script>
     <title>schemes</title>
 </head>
 <body>
@@ -47,6 +49,7 @@
 </nav>
 <main>
   <!-- content starts  -->
+  <div id="google_translate_element" class="translate"></div>
  
     <section>
         <div class="gethelpbg">
