--- a/pages/donarpages/donation.html
+++ b/pages/donarpages/donation.html
@@ -8,6 +8,8 @@
 	<script src="https://kit.fontawesome.com/98f622c388.js" crossorigin="anonymous"></script>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link href="https://fonts.googleapis.com/css2?family=Merienda:wght@400;700;900&display=swap" rel="stylesheet">
+	<script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <script src="../../assets/js/translator.js"></script>
 	<script src="../../assets/js/sweetalert.min.js"></script>
 
 </head>
@@ -18,6 +20,8 @@
 		<input type="checkbox" id="click" >
   
 	  </div> -->
+	  <div id="google_translate_element" class="translate"></div>
+
 	<nav>
 		<div class="side-nav">
 			<img src="../../assets/images/logo.png" width="250px" alt="image error" class="logoimg">
