--- a/pages/donarpages/involve.html
+++ b/pages/donarpages/involve.html
@@ -12,6 +12,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@400;700;900&display=swap" rel="stylesheet">
   
   <script src="https://kit.fontawesome.com/98f622c388.js" crossorigin="anonymous"></script>
+  <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <script src="../../assets/js/translator.js"></script>
   <script src="../../assets/js/sweetalert.min.js"></script>
   <title>gethelp</title>
 </head>
@@ -25,6 +27,8 @@
   <!-- nav bar starts  -->
   <nav>
     <!-- <div class="menu-bar"> -->
+    <div id="google_translate_element" class="translate"></div>
+
     <div class="side-nav">
       <img src="../../assets/images/logo.png" width="250px" alt="image error" class="logoimg">
       <ul class="navlinks">
