--- a/pages/patientpages/appointment.html
+++ b/pages/patientpages/appointment.html
@@ -9,6 +9,8 @@
   <script src="https://kit.fontawesome.com/98f622c388.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@400;700;900&display=swap" rel="stylesheet">
+  <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <script src="../../assets/js/translator.js"></script>
   <title>freshtrust</title>
   <link rel="icon" href="../../assets/images/icon.png">
 </head>
@@ -21,6 +23,8 @@
 
   </div> -->
   <nav>
+    <div id="google_translate_element" class="translate"></div>
+
     <div class="side-nav">
       <img src="../../assets/images/logo.png" width="250px" alt="image error" class="logoimg">
       <ul class="navlinks">
