--- a/pages/patientpages/gethelp.html
+++ b/pages/patientpages/gethelp.html
@@ -11,6 +11,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="icon" href="../../assets/images/icon.png">
   <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@400;700;900&display=swap" rel="stylesheet">
+  <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <script src="../../assets/js/translator.js"></script>
   <title>gethelp</title>
 </head>
 
@@ -21,6 +23,8 @@
 
   </div> -->
   <!-- nav bar starts  -->
+  <div id="google_translate_element" class="translate"></div>
+
   <nav>
     <div class="side-nav">
       <img src="../../assets/images/logo.png" width="250px" alt="image error" class="logoimg">
