--- a/pages/patientpages/govt.html
+++ b/pages/patientpages/govt.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="../../assets/css/common.css">
     <link rel="icon" href="../../assets/images/icon.png">
     <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@400;700;900&display=swap" rel="stylesheet">
+    <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <script src="../../assets/js/translator.js"></script>
     <title>gethelp</title>
 </head>
 
@@ -20,6 +22,8 @@
     <input type="checkbox" id="click" >
 
   </div> -->
+  <div id="google_translate_element" class="translate"></div>
+
     <nav>
         <div class="side-nav">
             <img src="../../assets/images/logo.png" width="250px" alt="image error" class="logoimg">
