--- a/pages/patientpages/contact.html
+++ b/pages/patientpages/contact.html
@@ -57,6 +57,8 @@
             <input type="text" id="phone" placeholder="yourmobile" required pattern="[0-9]\d*" maxlength="10" title="mobile number must be 10 digit number" >
             <textarea name="message" id="message" rows="4" placeholder="say something about you"  required></textarea>
             <button type="button" id="voice">Speak about yourself to help you and slash button recall it</button>
+            <button id="hear" type="button">Hear message</button>
+
             <button type="submit">send</button>
               
         </form>
