--- a/pages/donarpages/donationrequest.html
+++ b/pages/donarpages/donationrequest.html
@@ -15,7 +15,7 @@
   <script src="https://kit.fontawesome.com/98f622c388.js" crossorigin="anonymous"></script>
   <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   <script src="../../assets/js/translator.js"></script>
-  <script src="../../assets/sweetalert.min.js"></script>
+  <script src="../../assets/js/sweetalert.min.js"></script>
   <title>donation request</title>
 </head>
 
