--- a/pages/volunteerpages/signup.html
+++ b/pages/volunteerpages/signup.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../assets/css/signup.css">
-    <script src="../../assets/JS/sweetalert.min.js"></script>
+    <script src="../../assets/js/"></script>
 
 </head>
 
