--- a/pages/volunteerpages/signup.html
+++ b/pages/volunteerpages/signup.html
@@ -42,7 +42,7 @@
             <!-- registe cotent  -->
             <form id="register" class="input-group">
 
-                <h2 class="volreg">register</h2>
+                <h2 class="volreg">Volunteer register</h2>
 
                 <input type="text" class="input-field" placeholder="User name" title="name must only in alphabets"
                     required id="name" pattern="[a-zA-Z]+" />
